# choose_one_recommendation

./: .gitignore  CHANGELOG.md  Dockerfile  docker-compose-dev.yml  docker-compose.yml  entrypoint.sh  entrypoint_celery.sh  main.py  pyproject.toml
.conf/nginx/: local.conf
api/recommendations/: models.py  routes.py  schemas.py  services.py  tasks.py
core/: .settings.py.swp  celery.py  database.py  loggers.py  settings.py  utils.py
