[tool.poetry]
name = "choose_one_recommendation"
version = "0.1.0"
description = ""
authors = ["yurii <jurakulek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.2"
uvicorn = "^0.12.3"
gunicorn = "^20.0.4"
uvloop = "^0.14.0"
httptools = "^0.1.1"
environs = "^9.2.0"
autopep8 = "^1.5.4"
py2neo = "^2020.1.1"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
